# Stay-Alive

./: .gitignore  CMakeLists.txt  README.md  ]
shaders/: entity.frag  entity.vert  sky.frag  sky.vert  terrain.frag  terrain.vert  terrainShader.frag  terrainShader.vert  text.frag  text.vert
src/: config.hpp  main.cpp  main.cpp.bak  test.cpp
src/Entity/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Light.hpp
src/Game/: Game.cpp  Game.hpp
src/Light/: ClockTime.hpp  Light.cpp  Light.hpp
src/Model/: RawModel.hpp  TexturedModel.hpp
src/Render/: Display.cpp  Display.hpp  EntityRenderer.cpp  EntityRenderer.hpp  Loader.cpp  Loader.hpp  ObjLoader.cpp  ObjLoader.hpp  Renderer.cpp  Renderer.hpp  SkyRenderer.cpp  SkyRenderer.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/RenderEngine/: Display.cpp  Display.hpp  Loader.cpp  Loader.hpp  ObjLoader.cpp  ObjLoader.hpp
src/Shader/: EntityShader.cpp  EntityShader.hpp  Shader.cpp  Shader.hpp  SkyShader.cpp  SkyShader.hpp  TerrainShader.cpp  TerrainShader.hpp  TextShader.cpp  TextShader.hpp  shader.cpp
src/Terrain/: Terrain.cpp  Terrain.hpp
src/Text/: Text.cpp  Text.hpp
src/Texture/: ModelTexture.hpp
src/common/: shader.cpp
